--- a/Prediction_using_supervised_ML_.ipynb
+++ b/Prediction_using_supervised_ML_.ipynb
@@ -19,6 +19,7 @@
       "cell_type": "markdown",
       "source": [
         "###Simple Linear Regression\n",
+         "###Author: Imen Selmi"
         "In this regression task we will predict the percentage of marks that a student is expected to score based upon the number of hours they studied. This is a simple linear regression task as it involves just two variables."
       ],
       "metadata": {
